# SUtore

./: .gitignore  README.md  TESTING.md  insertproducts.sql  package-lock.json  package.json  sutore.session.sql  sutore_neondb.session.sql
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: admin.py  auth.py  categories.py  health.py  invoice_utils.py  manager.py  orders.py  products.py  reviews.py  wishlist.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: __init__.py
apps/api/app/models/: __init__.py  category.py  delivery.py  item_type.py  order.py  product.py  review.py  user.py  wishlist.py
apps/api/app/schemas/: __init__.py  admin.py  auth.py  category.py  delivery.py  item_type.py  order.py  product.py  review.py  wishlist.py
apps/api/app/services/: __init__.py  invoices.py  password_reset.py  product_filters.py  product_variants.py
apps/api/sutore_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_auth_endpoints.py  test_auth_schemas.py  test_orders_endpoints.py  test_product_variants_service.py  test_products_endpoints.py  test_reviews_endpoints.py
apps/api/tools/: README.md  backfill_product_variants.py  scrape_products.py
apps/web/: index.html  (+3 more)
backend/: .env.example
database/: 20260501_add_product_variant_fields.sql  20260508_add_password_reset_fields.sql  migration_optional_review_comment.sql  schemas.sql
scripts/: api-dev.mjs  api-test.mjs  api-tools.mjs  setup.mjs  sutore  sutore.mjs
(+71 files in other folders)
